tests/test_files_pa3/SemanticErrors/noReturnedVal.ic
class A
{	
	static void main(string[] args) { }

	int notReturn(int x)
	{
		int y = 0;
		
		if (x > 0)
			return x;
		else
		{
			{
				x =  y;
			}
			
			while (x > 0)
			{
				return x;
			}
			
			if (x > 0)
			{
			}
			else
			{
				return x;
			}
		}
	}
}